<resources>
    <string name="app_name">牵牛招聘</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dialog_delete_title">删除提示</string>
    <string name="dialog_delete_msg">您确定要删除该内容？</string>
    <string name="dialog_quitedittitle">提示</string>
    <string name="dialog_quiteditmsg">还未提交,确定要放弃本次修改么？</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_dataloadmsg">加载中...</string>
    <string name="dialog_datasubmitmsg">请稍候...</string>
    <string name="dialog_data_get_err">获取数据失败</string>
    <string name="dialog_submit_success">"成功提交到服务器"</string>
    <string name="dialog_submit_failed">"无法提交到服务器"</string>
    <string name="dialog_appquit_title">退出提示</string>
    <string name="dialog_appquit_msg">确定要退出牵牛吗？</string>
    <string name="dialog_download_title">下载提示</string>
    <string name="dialog_mobilenet_alertmsg">您当前使用的是移动数据网络，将会产生额外的下载流量，是否继续？</string>
    <string name="dialog_save_success">已保存</string>
    <string name="dialog_save_faile">保存失败</string>
    <string name="dialog_delete_success">已删除</string>
    <string name="dialog_delete_faile">删除失败</string>
    <string name="dialog_setdefault_success">已设为默认</string>
    <string name="dialog_setdefault_faile">默认设置失败</string>
    <string name="dialog_submit_nodata">暂不可以订阅，请返回查看其他内容或重新登录</string>
    <string name="notification_newmsg">您有新的消息通知</string>
    <string name="usermanager_forgot_hint_email">注册时所填的邮箱地址</string>
    <string name="usermanager_forgot_hint_mobile">注册时所填的手机号码</string>
    <string name="usermanager_forgot_hint_username">注册时所填的昵称或邮箱</string>
    <string name="usermanager_forgot_info_email">输入注册时登记的Email，我们把用户名和密码发送到该邮箱。</string>
    <string name="usermanager_forgot_info_optional_input">Email和用户名必须填写一项，用于匹配用户信息。</string>
    <string name="usermanager_forgot_tips_email_must_input">请输入你的Email地址</string>
    <string name="usermanager_forgot_tips_mobile">请输入你的手机号码</string>
    <string name="usermanager_forgot_title_mobile">手机号</string>
    <string name="usermanager_login_button_login">登 录</string>
    <string name="usermanager_login_button_qqlogin">使用QQ账户登录</string>
    <string name="usermanager_login_button_sinalogin">使用新浪微博账户登录</string>
    <string name="usermanager_login_button_register">注册</string>
    <string name="usermanager_login_forgot_byemail">使用邮箱重置密码</string>
    <string name="usermanager_login_forgot_bymobile">使用手机号重置密码</string>
    <string name="usermanager_login_forgot_title">请选择重置密码的方式</string>
    <string name="usermanager_login_hint_password">输入密码</string>
    <string name="usermanager_login_hint_username">输入手机号/邮件地址</string>
    <string name="usermanager_login_info_autologin">自 动 登 录</string>
    <string name="usermanager_login_info_forgetpass">忘记密码?</string>
    <string name="usermanager_login_info_register">赶紧去注册吧！</string>
    <string name="usermanager_login_tips_password_must_input">密码不能为空！</string>
    <string name="usermanager_login_tips_should_login">该功能需要登录后才能使用！</string>
    <string name="usermanager_login_tips_username_must_input">用户名不能为空！</string>
    <string name="usermanager_login_title_password">"密    码"</string>
    <string name="usermanager_login_title_username">用户名</string>
    <string name="usermanager_password_hint_current_password">你现在的密码</string>
    <string name="usermanager_password_hint_new_password">新密码</string>
    <string name="usermanager_password_hint_new_password_confirm">请确认你的新密码</string>
    <string name="usermanager_password_tips_new_must_input">新密码不能为空！</string>
    <string name="usermanager_password_tips_not_fit">两次输入新密码不一致！</string>
    <string name="usermanager_password_tips_old_must_input">旧密码不能为空！</string>
    <string name="usermanager_password_tips_re_must_input">请输入你的重复密码</string>
    <string name="usermanager_password_title_current_password">"旧密码    "</string>
    <string name="usermanager_password_title_new_password">"新密码    "</string>
    <string name="usermanager_password_title_new_password_confirm">确认密码</string>
    <string name="usermanager_register_button_submit">提交</string>
    <string name="usermanager_register_hint_email">你常用的邮箱地址</string>
    <string name="usermanager_register_hint_mobile_prompt">该手机号码用于找回密码</string>
    <string name="usermanager_register_hint_password">4位以上，区分大小写</string>
    <string name="usermanager_register_hint_password_confirm">请重新输入密码</string>
    <string name="usermanager_register_hint_username_prompt">须以字母开头，至少4位</string>
    <string name="usermanager_register_tips_createresume">"账号已注册成功！
现在是否创建简历？"</string>
    <string name="usermanager_register_tips_username_must_input">请输入用户名</string>
    <string name="usermanager_register_title_email">Email</string>
    <string name="usermanager_register_title_password_confrim">确认密码</string>
    <string name="usermanager_reset_hint_verifycode">请输入验证码</string>
    <string name="usermanager_reset_tips_verifycode">验证码不能为空！</string>
    <string name="usermanager_reset_title_verifycode">"验证码    "</string>
    <string name="register_title">注册</string>
    <string name="register_btn_submit">提交</string>
    <string name="register_title_username">用户名</string>
    <string name="register_hint_username">输入手机号/邮件地址</string>
    <string name="register_title_userpwd">用户密码</string>
    <string name="register_hint_userpwd">输入密码</string>
    <string name="register_title_userpwd_confirm">密码确认</string>
    <string name="register_hint_userpwd_confirm">再次输入密码</string>
    <string name="register_cb_read">我已经阅读并且同意</string>
    <string name="register_tv_read">《牵牛用户协议》</string>
    <string name="register_tv_prompt">温馨提示：请尽量填写真实手机号或者邮箱，以使我们将相关信息通知您</string>
    <string name="str_findpwd_title">忘记密码</string>
    <string name="str_findpwd_btn_moblie">通过手机找回密码</string>
    <string name="str_findpwd_btn_mail">通过邮箱找回密码</string>
    <string name="str_findpwd_moblie_btn_title">手机找回密码</string>
    <string name="str_findpwd_moblie_btn_submit">提交</string>
    <string name="str_findpwd_moblie_btn_verify">获取验证码</string>
    <string name="str_findpwd_moblie_title_username">用户名</string>
    <string name="str_findpwd_moblie_title_verify">验证码 </string>
    <string name="str_findpwd_moblie_title_userpwd">新密码</string>
    <string name="str_findpwd_moblie_title_userpwd_confirm">密码确认</string>
    <string name="str_findpwd_moblie_hint_username">请输入您的手机号</string>
    <string name="str_findpwd_moblie_hint_verify">请输入验证码</string>
    <string name="str_findpwd_moblie_hint_userpwd">请输入新密码</string>
    <string name="str_findpwd_moblie_hint_userpwd_confirm">请再次输入密码</string>
    <string name="str_findpwd_moblie_tv_prompt">温馨提示：为了保护您的账号安全性，密码长度至少为6位</string>
    <string name="str_findpwd_mail_btn_title">邮箱找回密码</string>
    <string name="str_findpwd_mail_btn_submit">提交</string>
    <string name="str_findpwd_mail_hint_username">请输入您的邮箱</string>
    <string name="str_findpwd_mail_tv_prompt">温馨提示：新密码将会发到您的已注册的邮箱里，请您注意查收</string>
    <string name="usermanager_token_invalid">该账号无效，请重新登录</string>
    <string name="usermanager_token_overtime">账号使用超时，请重新登录</string>
    <string name="usermanager_task_null">暂时没有任何记录</string>
    <string name="usermanager_unlogin">未登录，请先登录！</string>
    <string name="str_reward_sort_new">最新发布</string>
    <string name="str_reward_sort_youlike">猜您喜欢</string>
    <string name="str_reward_sort_peripheral_reward">周边悬赏</string>
    <string name="str_reward_sort_reward">悬赏金额</string>
    <string name="str_reward_type_interview">[ 面试 ]</string>
    <string name="str_reward_type_entry">[ 入职 ]</string>
    <string name="str_reward_type_job">推荐红包</string>
    <string name="str_reward_rmb">¥</string>
    <string name="str_reward_publisherdate_title">截止:</string>
    <string name="str_reward_validdate">剩余 %s 天</string>
    <string name="str_reward_attention">人关注</string>
    <string name="str_rewardinfo_title_job">职位详情</string>
    <string name="str_rewardinfo_title_personal">个人悬赏详情</string>
    <string name="str_rewardinfo_jobrecommend">我要赚钱</string>
    <string name="str_rewardinfo_candidate">投简历</string>
    <string name="str_rewardinfo_candidateok">已投简历</string>
    <string name="str_rewardinfo_recommend">推荐</string>
    <string name="str_companyinfo_title">公司详情</string>
    <string name="str_map_title">公司地址</string>
    <string name="str_citychoose_title">城市/地区</string>
    <string name="str_citychoose_hotcity">热点城市</string>
    <string name="str_industrychoose_title">行业</string>
    <string name="str_jobfunctionchoose_title">职位名称</string>
    <string name="str_rewardsearch_title">搜索</string>
    <string name="str_rewardsearch_area">地区</string>
    <string name="str_rewardsearch_industry">行业</string>
    <string name="str_rewardsearch_historysearch">历史搜索</string>
    <string name="str_rewardsearch_confirm">确定</string>
    <string name="str_rewardsearch_all">全部</string>
    <string name="str_rewardsearch_nohistory">无历史搜索记录</string>
    <string name="str_candidatesprompt_title">投简历</string>
    <string name="str_candidatesprompt_msg1">您确定要应聘%s的</string>
    <string name="str_candidatesprompt_msg2">%s吗？</string>
    <string name="str_candidatesprompt_msg">您确定要向%1$s的%2$s职位投简历吗？</string>
    <string name="str_candidatesprompt_prompt">将在1-2个工作日内给您答复</string>
    <string name="str_findpwdpop_title">忘记密码</string>
    <string name="str_findpwdpop_hint_method">请输入您的账户名(手机号或邮箱)</string>
    <string name="str_findpwdpop_button_mobile">手机号找回</string>
    <string name="str_findpwdpop_button_mail">邮箱找回</string>
    <string name="str_jobrecommend_title">我要赚钱</string>
    <string name="str_jobrecommend_name">姓名</string>
    <string name="str_jobrecommend_hint_name">请输入推荐人姓名</string>
    <string name="str_jobrecommend_tel">联系电话</string>
    <string name="str_jobrecommend_hint_tel">请输入联系电话</string>
    <string name="str_jobrecommend_reason">推荐理由</string>
    <string name="str_jobrecommend_hint_reason">请选择推荐理由</string>
    <string name="str_jobrecommend_hint_detailreason">请输入详细推荐理由，不超过500个字符</string>
    <string name="str_jobrecommend_submit">提交</string>
    <string name="str_jobrecommend_ask_content">您确定要认领这个赏金任务吗？</string>
    <string name="str_applyrefund_title">申请退款</string>
    <string name="str_applyrefund_name">姓名</string>
    <string name="str_applyrefund_hint_name">请输入退款人姓名</string>
    <string name="str_applyrefund_reason">退款理由</string>
    <string name="str_applyrefund_hint_refundreason">请输入详细退款理由，不超过500个字符</string>
    <string name="str_applyrefund_confirm">确定</string>
    <string name="str_applyrefund_must">*</string>
    <string name="setting_title_txt">设置</string>
    <string name="setting_select_city">城市选择</string>
    <string name="setting_to_sorce">去评分</string>
    <string name="setting_features_introduction">功能介绍</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_check_version">检查新版本</string>
    <string name="setting_modify_pwd">修改密码</string>
    <string name="setting_secure_pwd">安全密码</string>
    <string name="setting_task_showtype">任务展示切换</string>
    <string name="setting_subscription_management">订阅管理</string>
    <string name="setting_qn_recommend">牵牛推荐</string>
    <string name="setting_tele_note">客服热线：021-60727869</string>
    <string name="setting_exit_account">退出账号</string>
    <string name="popup_window_take_picture">拍&#160;&#160;照</string>
    <string name="popup_window_local_picture">从手机相册选择</string>
    <string name="popup_window_cancel">取&#160;&#160;消</string>
    <string name="tax_item_unit">元</string>
    <string name="tax_detail_title_txt">社保与公积金缴费明细</string>
    <string name="tax_detail_item_pension">养老</string>
    <string name="tax_detail_item_medical">医疗</string>
    <string name="tax_detail_item_losejob">失业</string>
    <string name="tax_detail_item_injuries">工伤</string>
    <string name="tax_detail_item_tips">个人无需承担</string>
    <string name="tax_detail_item_birth">生育</string>
    <string name="tax_detail_item_fund">公积金</string>
    <string name="tax_detail_total">合计个人缴费：%1$s元</string>
</resources>