<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00ff00" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/take_picture"
            style="@style/popup_window_button_style"
            android:background="@drawable/common_button_gray"
            android:text="@string/popup_window_take_picture" />

        <Button
            android:id="@+id/local_picture"
            style="@style/popup_window_button_style"
            android:layout_marginTop="10dp"
            android:background="@drawable/common_button_gray"
            android:text="@string/popup_window_local_picture" />

        <Button
            android:id="@+id/cancel"
            style="@style/popup_window_button_style"
            android:layout_marginTop="10dp"
            android:background="@drawable/common_button_red"
            android:text="@string/popup_window_cancel" />
    </LinearLayout>

</RelativeLayout>