<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >
    <RelativeLayout
        android:id="@+id/applyrefund_rl_top"
        style="@style/common_top_layout_style" >

        <ImageButton
			android:id="@+id/applyrefund_btn_goback"
			style="@style/common_top_left_title_style" 
			android:src="@drawable/common_button_back"/>

        <TextView
            android:id="@+id/applyrefund_tv_title"
            style="@style/common_top_center_bigtitle_style"
            android:text="@string/str_applyrefund_title" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
			<LinearLayout
	            android:layout_marginLeft="10.0dip"
	            android:layout_marginRight="10.0dip"
	            android:layout_marginTop="10.0dip"
	            style="@style/common_form_vertical_style"
	            >
			    <!-- 名字 -->
				<RelativeLayout style="@style/common_form_item_style" >

 					<LinearLayout android:id="@+id/applyrefund_rl_name"
                        style="@style/common_form_item_textviewlayout_style"
                        android:orientation="horizontal" >
						<TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_applyrefund_must"
                            android:textColor="@color/red" />
                        <TextView android:id="@+id/applyrefund_tv_name"
                            style="@style/common_form_item_textview_style"
                            android:text="@string/str_applyrefund_name" />
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/applyrefund_rl_edname"
                        style="@style/common_form_item_editlayout_style"
                        android:layout_toRightOf="@id/applyrefund_rl_name" >

                        <EditText
                            android:id="@+id/applyrefund_et_name"
                            style="@style/common_form_item_edittext_style"
                            android:hint="@string/str_applyrefund_hint_name"
                            android:imeOptions="actionNext" />
                    </RelativeLayout>
                </RelativeLayout>
                      
				<include layout="@layout/common_form_line" />

				<!-- 退款理由 -->
			    <RelativeLayout style="@style/common_form_big_item_style" >

                    <LinearLayout
                        android:id="@+id/applyrefund_rl_refundreason"
                        style="@style/common_form_big_item_textviewlayout_style" >

                        <TextView
                            style="@style/common_form_item_textview_style"
                            android:layout_marginTop="10dp"
                            android:text="@string/str_applyrefund_reason" />
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/applyrefund_rl_edrefundreason"
                        style="@style/common_form_item_editlayout_style"
                        android:layout_toRightOf="@id/applyrefund_rl_refundreason" >

                        <EditText
                            android:id="@+id/applyrefund_et_refundreason"
                            style="@style/common_form_item_big_edittext_style"
                            android:gravity="top"
                            android:hint="@string/str_applyrefund_hint_refundreason"
                            android:imeOptions="actionDone"
                            android:maxLength="500"
                            android:paddingBottom="15dp"
                            android:paddingTop="15dp" />
                    </RelativeLayout>
                </RelativeLayout>
	       </LinearLayout>
           <RelativeLayout
               android:id="@+id/applyrefund_lp_confirm"
               android:layout_marginTop="24.0dip"
               android:layout_gravity="center_horizontal"
               style="@style/common_button_green_big"
               >
			   <TextView
			   	   style="@style/common_button_text"
              	   android:text="@string/str_applyrefund_confirm"
			       />
           </RelativeLayout>
	    </LinearLayout>
    </ScrollView>
    <View
        android:id="@+id/quickrecommend_loading"
        style="@style/common_big_loading_style"  />
</LinearLayout>